@@ -1207,6 +1207,22 @@ namespace System
 
 				s = s.Substring (num_parsed);
 
+				if (!exact) {
+					switch (chars [pos]) {
+					case 'm':
+					case 's':
+					case 'f':
+					case 'z':
+						if (s.Length > 0 && s [0] == 'Z'
+						    && (pos + 1 == chars.Length
+						    || chars [pos + 1] != 'Z')) {
+							useutc = true;
+							s = s.Substring (1);
+						}
+						break;
+					}
+				}
+
 				pos = pos + num + 1;
 				num = 0;
 			}
