@@ -1,3 +1,7 @@
+2004-10-08  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* DateTime.cs : When it it not exact parse, 'Z' is allowed as a suffix
+	  of m/s/t/z. This fixes bug 66723.
 
 Wed Oct 6 12:37:54 CEST 2004 Paolo Molaro <lupus@ximian.com>
 
